第三章完成

--- a/static_site_generator/sitebuilder/templates/base.html
+++ b/static_site_generator/sitebuilder/templates/base.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description" content="{{ description|default:'Default prototype description' }}">
+    <meta name="kewords" content="{{ keywords|default:'prototype' }}">
     <title>{% block title %}Rapid Prototypes{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/site.css' %}">
